<?xml version="1.0"?>
<package format="2">
  <name>apollo</name>
  <version>0.1.0</version>
  <description>The lanelet2_extension pacakge contains libraries to handle Lanelet2 format data.</description>

  <maintainer email="ryohsuke.mitsudome@tier4.jp">mitsudome-r</maintainer>

  <license>Apach 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  
</package>
